# sample-building-a-conversational-ai-agent-for-aws-waf-analysis-with-agentcore

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  README.md  README_zh.md  agent.py  pyproject.toml
deploy/: backend.yaml  frontend.yaml  kb.yaml  sessions-api.yaml  sync-kb.sh  template.yaml
design/: DESIGN.md  duration-minutes-migration.md  search-to-metricstat-migration.md
docs/: architecture.drawio  athena-table-detection.md  athena-table-detection_zh.md  capabilities.md  capabilities_zh.md  cost-estimation.md  cost-estimation_zh.md  data-privacy.md  data-privacy_zh.md  deployment.md  deployment_zh.md  firehose-minute-partitioning.md  firehose-minute-partitioning_zh.md  iam-permissions.md  iam-permissions_zh.md  user-guide.md  user-guide_zh.md  why-waf-agent.md  why-waf-agent_zh.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
kb-docs/: advanced-bot-detection.md  antiddos-amr.md  asn-match.md  bot-control-labels-v5.md  bot-control.md  challenge-captcha.md  common-patterns.md  crawler-seo.md  dynamic-label-interpolation.md  false-positive-scope-down.md  firehose-minute-partitioning.md  fraud-control-atp-acfp.md  injection-rule-coverage-limits.md  ip-reputation.md  managed-overrides.md  rate-based.md  sqli-xss-false-positives.md  text-transformations.md  waf-hit-rate-monitoring.md  waf-log-field-availability.md  wordpress-waf-config.md
references/: bot-control.md  checklist.md  common-patterns.md  crawler-seo.md
scripts/: sync-kb.sh  waf-annotate-mermaid.py  waf-build-issue-map.py  (+9 more)
(+29 files in other folders)
