[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waf-agent"
version = "0.10.0"
requires-python = ">=3.12"
dependencies = [
    "strands-agents>=1.25.0",
    "boto3>=1.40.0",
    "markdown>=3.6",
    "bedrock-agentcore[strands-agents]>=0.1.0",
]

[project.optional-dependencies]
serve = [
    "ag-ui-strands>=0.1.1",
    "ag-ui-protocol>=0.1.13",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]
dev = [
    "pytest>=9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]
